src/1_Components/Cards/Variants/DoubleCard/DoubleCard.module.scss
@import "/src/styles/config/mediaQuery";

.DoubleCard {
  position: relative;
  display: grid;

  @include phone {
    padding: 40px 20px;
    gap: 32px;
  }

  @include desktop {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto 120px;
    gap: 72px;
  }
}

.ContentWrapper {
  z-index: 2;

  @include phone {
    padding: 0;
  }

  @include desktop {
    padding: 80px 0 0;
  }
}

.PrimaryMediaWrapper {
  position: relative;
  width: 100%;
  z-index: 1;

  @include phone {
    aspect-ratio: 2 / 2.25;
  }

  @include desktop {
    aspect-ratio: 2 / 2.1;
    transform: translateY(-48px);
    justify-self: end;
    max-width: 550px;
  }
}
.PrimaryMediaWrapperReversed {
  @extend .PrimaryMediaWrapper;

  @include desktop {
    justify-self: start;
  }
}

.SecondaryMediaWrapper {
  display: none;

  @include desktop {
    display: initial;

    width: 350px;
    height: 500px;

    grid-row: 2;
    grid-column: 1 / -1;

    align-self: center;
    justify-self: center;

    z-index: 0;
    transform: translate(72px, -28px);
  }
}
.SecondaryMediaWrapperReversed {
  @extend .SecondaryMediaWrapper;
  justify-self: start;
  transform: translate(-72px, -28px);
}

.Media {
  object-fit: cover;
}

